# AI-Project

./: ARCHITECTURE.md  COMPLETE_SESSION_SCRIPT.md  COMPLETION_MATRIX.md  COMPREHENSIVE_README.md  Cargo.toml  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  Dockerfile  GETTING_STARTED.md  METRICS.md  OPERATIONAL_RUNBOOKS.md  PHASE1_COMPLETE.md  PHASE2_PLANNING.md  PHASE2_ROADMAP.md  PHASE2_STATUS.md  PHASE2_WEEK1.md  PHASE2_WEEK2.md  PHASE2_WEEK3.md  PREREQUISITES.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_OVERVIEW.md  PROJECT_STATUS_WEEK4_DAY2.md  QUICKSTART.md  README.md  SESSION_SUMMARY.md  STATUS.md  WEEK3_COMPLETION.md  WEEK3_DELIVERABLES.md  WEEK3_FINAL_STATUS.md  WEEK3_PROGRESS.md  WEEK4_COMPLETION.md  WEEK4_PROGRESS.md  WEEK5_COMPLETION_REPORT.md  WEEK5_FINAL_REPORT.md  WEEK5_STATUS.md  WEEK6_DAY2_STATUS.md  WEEK6_DAY3_STATUS.md  WEEK6_DAY4_STATUS.md  WEEK6_DAYS1-4_SUMMARY.md  WEEK6_FINAL_REPORT.md  (+6 more)
aegis-scheduler/src/: block_ownership.rs  consistency.rs  distributed.rs  failure_detector.rs
audit/: Cargo.toml
audit/src/: engine.rs  lib.rs  metrics.rs  trail.rs
benchmarks/: Cargo.toml
benchmarks/benches/: audit_engine.rs  e2e_inference.rs  kv_scheduler.rs  speculative_decoding.rs
consensus/: Cargo.toml
consensus/src/: lib.rs  log.rs  state.rs
docker/: Dockerfile  Dockerfile.scheduler  docker-compose.3node-test.yml  docker-compose.scheduler.yml  docker-compose.yml  nginx.conf  prometheus.yml
gateway/: Cargo.toml
gateway/src/: auth.rs  lib.rs  metrics.rs  rate_limiter.rs  request_queue.rs  service.rs
inference-backends/: Cargo.toml
inference-backends/benches/: backend_latency.rs  speculative_with_llama.rs
inference-backends/src/: lib.rs  llama_cpp.rs  llama_cpp_safe.rs  llama_cpp_sys.rs  metrics.rs  mock.rs  traits.rs
kubernetes/: README.md  configmap.yaml  hpa.yaml  namespace.yaml  network-policy.yaml  rbac.yaml  service.yaml  statefulset.yaml
proto/: Cargo.toml  build.rs
proto/src/: lib.rs
proto/src/proto/: audit.proto  inference.proto  scheduling.proto
runtime/: Cargo.toml
runtime/src/: lib.rs
safety/: Cargo.toml
safety/src/: lib.rs  metrics.rs  monitor.rs  policy.rs
scheduler/: Cargo.toml
scheduler/benches/: consensus_production_bench.rs  distributed_cache.rs  distributed_cache_bench.rs  state_machine_replication_bench.rs  tracing_bench.rs
scheduler/src/: allocator.rs  block_ownership.rs  consensus.rs  consensus_grpc_server.rs  consensus_kv_cache.rs  consistency.rs  distributed.rs  failure_detector.rs  grpc_server.rs  lib.rs  metrics.rs  node_selector.rs  persistence.rs  policy.rs  remote_allocator.rs  replicated_log.rs  state_machine.rs  state_machine_coordinator.rs  state_machine_grpc.rs  state_machine_replication.rs  tracing_integration.rs
scheduler/tests/: chaos_tests.rs  consensus_kv_cache_e2e.rs  consensus_replication_tests.rs  distributed_grpc.rs  distributed_tracing_e2e.rs  failure_recovery_tests.rs  integration_3node.rs  network_hardening_tests.rs  state_machine_grpc_e2e.rs  state_machine_integration.rs  state_machine_replication_e2e.rs  tracing_tests.rs
scripts/: start-cluster.sh
speculative/: Cargo.toml
speculative/src/: branch.rs  coordinator.rs  lib.rs  metrics.rs
telemetry/: Cargo.toml
telemetry/src/: distributed_tracing.rs  lib.rs  metrics.rs  otlp_export.rs  tracing.rs
