[workspace]
members = [
    "gateway",
    "scheduler",
    "speculative",
    "safety",
    "audit",
    "telemetry",
    "consensus",
    "runtime",
    "proto",
    "benchmarks",
    "inference-backends",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AEGIS Infrastructure"]
repository = "https://github.com/aegis-inference/aegis"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# gRPC + Networking
tonic = "0.11"
prost = "0.12"
prost-types = "0.12"
quic = "0.1"

# Concurrency primitives
parking_lot = "0.12"
dashmap = "5.5"
crossbeam = "0.8"
crossbeam-channel = "0.5"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.14", features = ["trace", "metrics"] }
prometheus = "0.13"

# Crypto + Hashing
blake3 = "1.5"
merkle-tree = "0.4"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
bincode = "1.3"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
regex = "1.10"

# Benchmarking
criterion = { version = "0.5", features = ["async_tokio"] }
rand = "0.8"

# Testing
proptest = "1.4"
mockall = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
