[package]
name = "aegis-audit"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
chrono.workspace = true
uuid.workspace = true
anyhow.workspace = true
tracing.workspace = true

aegis-proto = { path = "../proto" }
aegis-telemetry = { path = "../telemetry" }
