[package]
name = "aegis-gateway"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
tonic.workspace = true
prost.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prometheus.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

aegis-proto = { path = "../proto" }
aegis-telemetry = { path = "../telemetry" }

[dev-dependencies]
criterion.workspace = true
