[package]
name = "aegis-inference-backends"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
tracing.workspace = true
parking_lot.workspace = true
async-trait = "0.1"
num_cpus = "1.16"

[dev-dependencies]
criterion.workspace = true
rand.workspace = true

[features]
default = ["mock"]
mock = []
llama-cpp = []

[[bench]]
name = "backend_latency"
harness = false

[[bench]]
name = "speculative_with_llama"
harness = false
