[package]
name = "aegis-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

aegis-proto = { path = "../proto" }
aegis-gateway = { path = "../gateway" }
aegis-scheduler = { path = "../scheduler" }
aegis-speculative = { path = "../speculative" }
aegis-safety = { path = "../safety" }
aegis-audit = { path = "../audit" }
aegis-consensus = { path = "../consensus" }
aegis-telemetry = { path = "../telemetry" }
