[package]
name = "aegis-safety"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
uuid.workspace = true

aegis-proto = { path = "../proto" }
aegis-telemetry = { path = "../telemetry" }
