[package]
name = "aegis-speculative"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
serde.workspace = true

aegis-proto = { path = "../proto" }
aegis-telemetry = { path = "../telemetry" }
